Fixed unequal spacing in mobile navbar

--- a/src/components/Project/index.css
+++ b/src/components/Project/index.css
@@ -1,3 +1,5 @@
+@import "animate.css";
+
 .project-container{
     display: grid;
     grid-template-columns: 1fr;
@@ -12,6 +14,7 @@
     width: 75%;
     border-radius: 20px;
     box-shadow: 5px 10px 18px black;
+    animation: slideInLeft 2s;
 }
 
 .project-info-image{
@@ -45,6 +48,7 @@
     width:100%;
     padding: 0;
     height: 100%;
+    animation:zoomInDown 2s;
 }
 
 .project-description{
@@ -93,9 +97,19 @@
     position: relative;
     padding: 0.5em;
     color:var(--dominant-colour);
-    text-decoration: underline;
     font-size: 20px;
+    transition:color 0.3s ease-in;
 }
+
+.source-code:hover{
+    color:black;
+}
+
+.gh-icon{
+    text-decoration: underline;
+}
+
+
 
 .project-buttons{
     display: flex;
@@ -234,8 +248,12 @@
         display: block;
         padding: 0.5em;
         color:var(--dominant-colour);
-        text-decoration: underline;
         font-size: 20px;
+        transition:color 0.3s ease-in;
+    }
+    
+    .source-code:hover{
+        color:black;
     }
     
     .project-buttons{
