--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -5,7 +5,9 @@
 .intro-image{
   flex:1;
   width: 100%;
+  animation: fadeIn 2s;
 }
+
 
 .intro-image img{
   width:100%;
@@ -178,7 +180,7 @@
   }
   .intro-image img{
     width: 100%;
-    height:100vh;
+    min-height:100vh;
   }
 
   .contact-menu{
